{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 38,
  "lineage": "4253f12a-964d-2ceb-99c1-a2e212ffd2ca",
  "resources": [
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:security-group/sg-073f6ae8c824fa89f",
            "description": "MySQL security group",
            "egress": [],
            "id": "sg-073f6ae8c824fa89f",
            "ingress": [],
            "name": "nichiporenko-db-sg-20220321113649219500000004",
            "name_prefix": "nichiporenko-db-sg-",
            "owner_id": "061770395289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nichiporenko-db-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-db-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-2030620134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-073f6ae8c824fa89f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_security_group.aws_security_group.this",
            "module.db_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:security-group/sg-08788e23bc53800f8",
            "description": "EC2 security group",
            "egress": [],
            "id": "sg-08788e23bc53800f8",
            "ingress": [],
            "name": "nichiporenko-ec2-sg-20220321113648942300000003",
            "name_prefix": "nichiporenko-ec2-sg-",
            "owner_id": "061770395289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nichiporenko-ec2-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-ec2-sg",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2234659394",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08788e23bc53800f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1049068682",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08788e23bc53800f8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:internet-gateway/igw-0f5ec4546585ce85f",
            "id": "igw-0f5ec4546585ce85f",
            "owner_id": "061770395289",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5ec4546585ce85f",
            "id": "r-rtb-032508c83f7d842e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032508c83f7d842e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-0d79bdc12d98438be",
            "id": "rtb-0d79bdc12d98438be",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-0c2737e1f92f9aa25",
            "id": "rtb-0c2737e1f92f9aa25",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-0ee68f3a9e70e9758",
            "id": "rtb-0ee68f3a9e70e9758",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:route-table/rtb-032508c83f7d842e5",
            "id": "rtb-032508c83f7d842e5",
            "owner_id": "061770395289",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093303d5a018a0e5d",
            "route_table_id": "rtb-0d79bdc12d98438be",
            "subnet_id": "subnet-0df84cb50fa5c3673"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eddb190209a8f033",
            "route_table_id": "rtb-0c2737e1f92f9aa25",
            "subnet_id": "subnet-04becefd73024eafb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e0be8eb2a4c4e6c",
            "route_table_id": "rtb-0ee68f3a9e70e9758",
            "subnet_id": "subnet-0459529a3b1ad542a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059cff87f81445f13",
            "route_table_id": "rtb-0d79bdc12d98438be",
            "subnet_id": "subnet-0c8175a5ac395b9f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a0d726611fab14",
            "route_table_id": "rtb-0c2737e1f92f9aa25",
            "subnet_id": "subnet-0630cb311038b3bdc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03071d425f98e9406",
            "route_table_id": "rtb-0ee68f3a9e70e9758",
            "subnet_id": "subnet-0dd05fea446acb31c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013be3ad16d8687ab",
            "route_table_id": "rtb-032508c83f7d842e5",
            "subnet_id": "subnet-0935382c642332173"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02538778ad8a34250",
            "route_table_id": "rtb-032508c83f7d842e5",
            "subnet_id": "subnet-03fbb929157bb21f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047a0974093450305",
            "route_table_id": "rtb-032508c83f7d842e5",
            "subnet_id": "subnet-019dabdce5259e4a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0df84cb50fa5c3673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df84cb50fa5c3673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-04becefd73024eafb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04becefd73024eafb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0459529a3b1ad542a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0459529a3b1ad542a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0c8175a5ac395b9f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8175a5ac395b9f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0630cb311038b3bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630cb311038b3bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0dd05fea446acb31c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd05fea446acb31c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-0935382c642332173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0935382c642332173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-03fbb929157bb21f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fbb929157bb21f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:subnet/subnet-019dabdce5259e4a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019dabdce5259e4a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061770395289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "vpc_id": "vpc-0d13e62dfa8af0e7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061770395289:vpc/vpc-0d13e62dfa8af0e7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b7a6972cbbb2904",
            "default_route_table_id": "rtb-08adf25f018f2657d",
            "default_security_group_id": "sg-0bf791adf3c576ac8",
            "dhcp_options_id": "dopt-fe85b384",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d13e62dfa8af0e7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08adf25f018f2657d",
            "owner_id": "061770395289",
            "tags": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "nichiporenko-vpc",
              "Namespace": "nichiporenko",
              "Stage": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}